# KobeBryant

./: .gitignore  .mlflow_run_id  README.md  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml  parameters_model_data_analize.yml  parameters_model_predicts.yml  parameters_model_serving.yml  parameters_predict_api_decision_tree.yml  parameters_predict_api_logistic_regression.yml
data/02_intermediate/: data_shots_not_null.parquet  homologacao_data_labeled.parquet  producao_data_labeled.parquet
data/03_primary/: combined_data_analize.parquet  data_shots_prod_normalized.parquet
data/04_feature/: data_features.parquet  data_features_prod.parquet
data/05_model_input/: shots_test.parquet  shots_train.parquet  test_data_analize.parquet  train_data_analize.parquet
data/06_models/: drift_report.pickle  dt_tuned.pickle  lr_tuned.pickle
data/07_model_output/: metrics_dt_test.csv  metrics_dt_train.csv  metrics_lr_test.csv  metrics_lr_train.csv  metrics_prod_dt.csv  metrics_prod_lr.csv  predicted_probabilities_dt_test.csv  predicted_probabilities_dt_train.csv  predicted_probabilities_lr_test.csv  predicted_probabilities_lr_train.csv  predictions_dt_test.csv  predictions_dt_train.csv  predictions_lr_test.csv  predictions_proba_prod_dt.csv  (+5 more)
notebooks/: analise_dados_inicial.ipynb  analise_resultados_predicoes_lr.ipynb  analise_selecao_features.ipynb  predicoes_prod.ipynb  treinamento_regressao_logistica.ipynb
streamlit/: main.py
(+97 files in other folders)
